Squashed commit of the following:
commit dbdd53a3c0738a3658994180a7c36bd42e96f4dc
Author: alexbleggi <alexbleggi@gmail.com>
Date:   Tue Jun 22 14:33:56 2021 -0300

    ajustes themes

commit 9a59a039ca8cc04462ea59ff513a3cef4875bce7
Author: alexbleggi <alexbleggi@gmail.com>
Date:   Tue Jun 22 11:30:17 2021 -0300

    themes

commit e4d64676338b36dcaea104224e271bad1550271f
Author: alexbleggi <alexbleggi@gmail.com>
Date:   Tue Jun 22 11:20:22 2021 -0300

    Squashed commit of the following:

    commit 5661fec6d3fbd0080eb0e5978205e08f8ffb1912
    Author: alexbleggi <alexbleggi@gmail.com>
    Date:   Tue Jun 22 11:16:12 2021 -0300

        Implementação themes

    commit 69b5b6625b204adfa55690c96487c9e18a445eff
    Author: alexbleggi <alexbleggi@gmail.com>
    Date:   Mon Jun 21 16:33:52 2021 -0300

        commit

    commit 1e1ccdcc776e7dae8f528bb7ae435a82ba0b05b8
    Author: alexbleggi <alexbleggi@gmail.com>
    Date:   Mon Jun 21 10:08:37 2021 -0300

        Squashed commit of the following:

        commit e65dbc46475e45ace8e6a1b59b318ad8cc3e383b
        Author: alexbleggi <alexbleggi@gmail.com>
        Date:   Mon Jun 21 10:00:11 2021 -0300

            ajustes theme

        commit 4448de1c85585360ba2cc24b7d55d5277d05168b
        Author: alexbleggi <alexbleggi@gmail.com>
        Date:   Wed Jun 16 10:01:28 2021 -0300

            Ajustes botao

        commit 38337356bfe6d8918f81b0b75db7747855cfb84a
        Author: alexbleggi <alexbleggi@gmail.com>
        Date:   Tue Jun 15 15:07:00 2021 -0300

            commit

        commit a40073b0ad69552dd0abdab2b12aa07f7a7fdffd
        Author: alexbleggi <alexbleggi@gmail.com>
        Date:   Tue Jun 15 13:35:16 2021 -0300

            commit

        commit 832ec6f4d49481cafc525c9dbeed0d9d5d146939
        Author: alexbleggi <alexbleggi@gmail.com>
        Date:   Tue Jun 15 10:53:46 2021 -0300

            Ajuste button

        commit e8a38562a76b58cf90615607709796be90494387
        Author: alexbleggi <alexbleggi@gmai

--- a/core/med-components/_functions.scss
+++ b/core/med-components/_functions.scss
@@ -60,3 +60,33 @@
 
   @return $number;
 }
+
+//
+// theme
+//
+
+@function medsoft-current-color($variation, $alpha: null) {
+  @if $alpha == null {
+    @return var(--med-color-#{$variation});
+  } @else {
+    @return rgba(var(--med-color-#{$variation}-rgb), #{$alpha});
+  }
+}
+
+@function medsoft-color($name, $variation, $alpha: null, $rgb: null) {
+  $values: map-get($medsoft-colors, $name);
+  $value: map-get($values, $variation);
+  $variable: --med-color-#{$name}-#{$variation};
+
+  @if ($alpha) {
+    $value: color-to-rgb-list($value);
+    @return rgba(var(#{$variable}-rgb, $value), $alpha);
+  }
+
+  @if ($rgb) {
+    $value: color-to-rgb-list($value);
+    $variable: #{$variable}-rgb;
+  }
+
+  @return var(#{$variable}, $value);
+}
