--- a/core/src/css/core.scss
+++ b/core/src/css/core.scss
@@ -73,7 +73,6 @@ html.ios ion-modal .ion-page {
   }
 }
 
-
 // Page Container Structure
 // --------------------------------------------------
 
@@ -201,3 +200,12 @@ ion-card-header.ion-color .ion-inherit-color {
 .md .menu-content-push {
   box-shadow: $menu-md-box-shadow;
 }
+
+//
+// medsoft
+//
+
+@import "../../med-components/variables";
+@import "../../med-components/mixins";
+
+@include generate-medsoft-color-classes();
