--- a/core/src/themes/ionic.theme.default.scss
+++ b/core/src/themes/ionic.theme.default.scss
@@ -1,7 +1,5 @@
 @import "./ionic.deprecation";
 
-@import "./../../med-components/variables";
-
 // Ionic Theme
 // -------------------------------------------------------------------------------------------
 // This file contains the theme variables shared
@@ -80,355 +78,7 @@ $colors:  (
     contrast:         #fff,
     shade:            get-color-shade($dark),
     tint:             get-color-tint($dark)
-  ),
-
-  /* primary-gradient: (
-    base:             $med-color-brand-primary-gradient,
-    contrast:         #fff,
-    shade:            $med-color-brand-primary-medium,
-    tint:             $med-color-brand-primary-medium
-  ), */
-
-  primary-darkest: (
-    base:             $med-color-brand-primary-darkest,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-brand-primary-darkest),
-    tint:             get-color-tint($med-color-brand-primary-darkest)
-  ),
-  primary-dark: (
-    base:             $med-color-brand-primary-dark,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-brand-primary-dark),
-    tint:             get-color-tint($med-color-brand-primary-dark)
-  ),
-  primary-medium: (
-    base:             $med-color-brand-primary-medium,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-brand-primary-medium),
-    tint:             get-color-tint($med-color-brand-primary-medium)
-  ),
-  primary-light: (
-    base:             $med-color-brand-primary-light,
-    contrast:         #000,
-    shade:            get-color-shade($med-color-brand-primary-light),
-    tint:             get-color-tint($med-color-brand-primary-light)
-  ),
-  primary-lightest: (
-    base:             $med-color-brand-primary-lightest,
-    contrast:         #000,
-    shade:            get-color-shade($med-color-brand-primary-lightest),
-    tint:             get-color-tint($med-color-brand-primary-lightest)
-  ),
-
-  aula-darkest: (
-    base:             $med-color-aula-darkest,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-aula-darkest),
-    tint:             get-color-tint($med-color-aula-darkest)
-  ),
-  aula-dark: (
-    base:             $med-color-aula-dark,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-aula-dark),
-    tint:             get-color-tint($med-color-aula-dark)
-  ),
-  aula-medium: (
-    base:             $med-color-aula-medium,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-aula-medium),
-    tint:             get-color-tint($med-color-aula-medium)
-  ),
-  aula-light: (
-    base:             $med-color-aula-light,
-    contrast:         #000,
-    shade:            get-color-shade($med-color-aula-light),
-    tint:             get-color-tint($med-color-aula-light)
-  ),
-  aula-lightest: (
-    base:             $med-color-aula-lightest,
-    contrast:         #000,
-    shade:            get-color-shade($med-color-aula-lightest),
-    tint:             get-color-tint($med-color-aula-lightest)
-  ),
-
-  material-darkest: (
-    base:             $med-color-material-darkest,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-material-darkest),
-    tint:             get-color-tint($med-color-material-darkest)
-  ),
-  material-dark: (
-    base:             $med-color-material-dark,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-material-dark),
-    tint:             get-color-tint($med-color-material-dark)
-  ),
-  material-medium: (
-    base:             $med-color-material-medium,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-material-medium),
-    tint:             get-color-tint($med-color-material-medium)
-  ),
-  material-light: (
-    base:             $med-color-material-light,
-    contrast:         #000,
-    shade:            get-color-shade($med-color-material-light),
-    tint:             get-color-tint($med-color-material-light)
-  ),
-  material-lightest: (
-    base:             $med-color-material-lightest,
-    contrast:         #000,
-    shade:            get-color-shade($med-color-material-lightest),
-    tint:             get-color-tint($med-color-material-lightest)
-  ),
-
-  questoes-darkest: (
-    base:             $med-color-questoes-darkest,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-questoes-darkest),
-    tint:             get-color-tint($med-color-questoes-darkest)
-  ),
-  questoes-dark: (
-    base:             $med-color-questoes-dark,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-questoes-dark),
-    tint:             get-color-tint($med-color-questoes-dark)
-  ),
-  questoes-medium: (
-    base:             $med-color-questoes-medium,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-questoes-medium),
-    tint:             get-color-tint($med-color-questoes-medium)
-  ),
-  questoes-light: (
-    base:             $med-color-questoes-light,
-    contrast:         #000,
-    shade:            get-color-shade($med-color-questoes-light),
-    tint:             get-color-tint($med-color-questoes-light)
-  ),
-  questoes-lightest: (
-    base:             $med-color-questoes-lightest,
-    contrast:         #000,
-    shade:            get-color-shade($med-color-questoes-lightest),
-    tint:             get-color-tint($med-color-questoes-lightest)
-  ),
-
-  revalida-darkest: (
-    base:             $med-color-revalida-darkest,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-revalida-darkest),
-    tint:             get-color-tint($med-color-revalida-darkest)
-  ),
-  revalida-dark: (
-    base:             $med-color-revalida-dark,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-revalida-dark),
-    tint:             get-color-tint($med-color-revalida-dark)
-  ),
-  revalida-medium: (
-    base:             $med-color-revalida-medium,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-revalida-medium),
-    tint:             get-color-tint($med-color-revalida-medium)
-  ),
-  revalida-light: (
-    base:             $med-color-revalida-light,
-    contrast:         #000,
-    shade:            get-color-shade($med-color-revalida-light),
-    tint:             get-color-tint($med-color-revalida-light)
-  ),
-  revalida-lightest: (
-    base:             $med-color-revalida-lightest,
-    contrast:         #000,
-    shade:            get-color-shade($med-color-revalida-lightest),
-    tint:             get-color-tint($med-color-revalida-lightest)
-  ),
-
-  provaschecklist-darkest: (
-    base:             $med-color-provaschecklist-darkest,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-provaschecklist-darkest),
-    tint:             get-color-tint($med-color-provaschecklist-darkest)
-  ),
-  provaschecklist-dark: (
-    base:             $med-color-provaschecklist-dark,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-provaschecklist-dark),
-    tint:             get-color-tint($med-color-provaschecklist-dark)
-  ),
-  provaschecklist-medium: (
-    base:             $med-color-provaschecklist-medium,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-provaschecklist-medium),
-    tint:             get-color-tint($med-color-provaschecklist-medium)
-  ),
-  provaschecklist-light: (
-    base:             $med-color-provaschecklist-light,
-    contrast:         #000,
-    shade:            get-color-shade($med-color-provaschecklist-light),
-    tint:             get-color-tint($med-color-provaschecklist-light)
-  ),
-  provaschecklist-lightest: (
-    base:             $med-color-provaschecklist-lightest,
-    contrast:         #000,
-    shade:            get-color-shade($med-color-provaschecklist-lightest),
-    tint:             get-color-tint($med-color-provaschecklist-lightest)
-  ),
-
-  dark-prime: (
-    base:             $med-color-neutral-dark-prime,
-    contrast:         $med-color-neutral-light-40,
-    shade:            get-color-shade($med-color-neutral-dark-prime),
-    tint:             get-color-tint($med-color-neutral-dark-prime)
-  ),
-  dark-40: (
-    base:             $med-color-neutral-dark-40,
-    contrast:         $med-color-neutral-light-40,
-    shade:            get-color-shade($med-color-neutral-dark-40),
-    tint:             get-color-tint($med-color-neutral-dark-40)
-  ),
-  dark-30: (
-    base:             $med-color-neutral-dark-30,
-    contrast:         $med-color-neutral-light-40,
-    shade:            get-color-shade($med-color-neutral-dark-30),
-    tint:             get-color-tint($med-color-neutral-dark-30)
-  ),
-  dark-20: (
-    base:             $med-color-neutral-dark-20,
-    contrast:         $med-color-neutral-light-prime,
-    shade:            get-color-shade($med-color-neutral-dark-20),
-    tint:             get-color-tint($med-color-neutral-dark-20)
-  ),
-  dark-10: (
-    base:             $med-color-neutral-dark-10,
-    contrast:         $med-color-neutral-light-prime,
-    shade:            get-color-shade($med-color-neutral-dark-10),
-    tint:             get-color-tint($med-color-neutral-dark-10)
-  ),
-
-  light-prime: (
-    base:             $med-color-neutral-light-prime,
-    contrast:         $med-color-neutral-dark-30,
-    shade:            get-color-shade($med-color-neutral-light-prime),
-    tint:             get-color-tint($med-color-neutral-light-prime)
-  ),
-  light-40: (
-    base:             $med-color-neutral-light-40,
-    contrast:         $med-color-neutral-dark-30,
-    shade:            get-color-shade($med-color-neutral-light-40),
-    tint:             get-color-tint($med-color-neutral-light-40)
-  ),
-  light-30: (
-    base:             $med-color-neutral-light-30,
-    contrast:         $med-color-neutral-dark-30,
-    shade:            get-color-shade($med-color-neutral-light-30),
-    tint:             get-color-tint($med-color-neutral-light-30)
-  ),
-  light-20: (
-    base:             $med-color-neutral-light-20,
-    contrast:         $med-color-neutral-dark-40,
-    shade:            get-color-shade($med-color-neutral-light-20),
-    tint:             get-color-tint($med-color-neutral-light-20)
-  ),
-  light-10: (
-    base:             $med-color-neutral-light-10,
-    contrast:         $med-color-neutral-dark-40,
-    shade:            get-color-shade($med-color-neutral-light-10),
-    tint:             get-color-tint($med-color-neutral-light-10)
-  ),
-
-  warning-darkest: (
-    base:             $med-color-feedback-warning-darkest,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-feedback-warning-darkest),
-    tint:             get-color-tint($med-color-feedback-warning-darkest)
-  ),
-  warning-dark: (
-    base:             $med-color-feedback-warning-dark,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-feedback-warning-dark),
-    tint:             get-color-tint($med-color-feedback-warning-dark)
-  ),
-  warning-medium: (
-    base:             $med-color-feedback-warning-medium,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-feedback-warning-medium),
-    tint:             get-color-tint($med-color-feedback-warning-medium)
-  ),
-  warning-light: (
-    base:             $med-color-feedback-warning-light,
-    contrast:         #000,
-    shade:            get-color-shade($med-color-feedback-warning-light),
-    tint:             get-color-tint($med-color-feedback-warning-light)
-  ),
-  warning-lightest: (
-    base:             $med-color-feedback-warning-lightest,
-    contrast:         #000,
-    shade:            get-color-shade($med-color-feedback-warning-lightest),
-    tint:             get-color-tint($med-color-feedback-warning-lightest)
-  ),
-
-  error-darkest: (
-    base:             $med-color-feedback-error-darkest,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-feedback-error-darkest),
-    tint:             get-color-tint($med-color-feedback-error-darkest)
-  ),
-  error-dark: (
-    base:             $med-color-feedback-error-dark,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-feedback-error-dark),
-    tint:             get-color-tint($med-color-feedback-error-dark)
-  ),
-  error-medium: (
-    base:             $med-color-feedback-error-medium,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-feedback-error-medium),
-    tint:             get-color-tint($med-color-feedback-error-medium)
-  ),
-  error-light: (
-    base:             $med-color-feedback-error-light,
-    contrast:         #000,
-    shade:            get-color-shade($med-color-feedback-error-light),
-    tint:             get-color-tint($med-color-feedback-error-light)
-  ),
-  error-lightest: (
-    base:             $med-color-feedback-error-lightest,
-    contrast:         #000,
-    shade:            get-color-shade($med-color-feedback-error-lightest),
-    tint:             get-color-tint($med-color-feedback-error-lightest)
-  ),
-
-  success-darkest: (
-    base:             $med-color-feedback-success-darkest,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-feedback-success-darkest),
-    tint:             get-color-tint($med-color-feedback-success-darkest)
-  ),
-  success-dark: (
-    base:             $med-color-feedback-success-dark,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-feedback-success-dark),
-    tint:             get-color-tint($med-color-feedback-success-dark)
-  ),
-  success-medium: (
-    base:             $med-color-feedback-success-medium,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-feedback-success-medium),
-    tint:             get-color-tint($med-color-feedback-success-medium)
-  ),
-  success-light: (
-    base:             $med-color-feedback-success-light,
-    contrast:         #000,
-    shade:            get-color-shade($med-color-feedback-success-light),
-    tint:             get-color-tint($med-color-feedback-success-light)
-  ),
-  success-lightest: (
-    base:             $med-color-feedback-success-lightest,
-    contrast:         #000,
-    shade:            get-color-shade($med-color-feedback-success-lightest),
-    tint:             get-color-tint($med-color-feedback-success-lightest)
-  ),
+  )
 ) !default;
 
 // Default Foreground and Background Colors
