--- a/core/med-components/_mixins.scss
+++ b/core/med-components/_mixins.scss
@@ -124,37 +124,57 @@
 @mixin generate-custom-theme($name) {
   :root {
     .theme-#{$name} {
-      @each $key, $value in $colors {
-        $base: map-get(map-get($colors, $key), base);
-        $contrast: map-get(map-get($colors, $key), contrast);
-        $shade: map-get(map-get($colors, $key), shade);
-        $tint: map-get(map-get($colors, $key), tint);
-
-        --ion-color-#{$key}: #{$base};
-        --ion-color-#{$key}-rgb: #{list-color-rgb($base)};
-        --ion-color-#{$key}-contrast: #{$contrast};
-        --ion-color-#{$key}-contrast-rgb: #{list-color-rgb($contrast)};
-        --ion-color-#{$key}-shade: #{$shade};
-        --ion-color-#{$key}-tint: #{$tint};
+      @each $color-name, $value in $medsoft-colors {
+        @include generate-medsoft-color($color-name);
       }
     }
   }
 
   .theme-#{$name} {
-    @each $key, $value in $colors {
-      .ion-color-#{$key} {
-        $base: map-get(map-get($colors, $key), base);
-        $contrast: map-get(map-get($colors, $key), contrast);
-        $shade: map-get(map-get($colors, $key), shade);
-        $tint: map-get(map-get($colors, $key), tint);
-
-        --ion-color-base: var(--ion-color-#{$key}, #{$base}) !important;
-        --ion-color-base-rgb: var(--ion-color-#{$key}-rgb, #{list-color-rgb($base)}) !important;
-        --ion-color-contrast: var(--ion-color-#{$key}-contrast, #{$contrast}) !important;
-        --ion-color-contrast-rgb: var(--ion-color-#{$key}-contrast-rgb, #{list-color-rgb($contrast)}) !important;
-        --ion-color-shade: var(--ion-color-#{$key}-shade, #{$shade}) !important;
-        --ion-color-tint: var(--ion-color-#{$key}-tint, #{$tint}) !important;
+    @each $color-name, $value in $medsoft-colors {
+      .ion-color-#{$color-name} {
+        @include generate-medsoft-color($color-name);
       }
+    }
+  }
+}
+
+@mixin generate-medsoft-color($color-name) {
+  $value: map-get($medsoft-colors, $color-name);
+
+  $contrast: map-get($value, contrast);
+  $darkest: map-get($value, darkest);
+  $dark: map-get($value, dark);
+  $medium: map-get($value, medium);
+  $light: map-get($value, light);
+  $lightest: map-get($value, lightest);
+  $gradient: map-get($value, gradient);
+
+  --med-color-contrast: var(--med-color-#{$color-name}-contrast, #{$contrast}) !important;
+  --med-color-contrast-rgb: var(--med-color-#{$color-name}-contrast-rgb, #{color-to-rgb-list($contrast)}) !important;
+
+  --med-color-darkest: var(--med-color-#{$color-name}-darkest, #{$darkest}) !important;
+  --med-color-darkest-rgb: var(--med-color-#{$color-name}-darkest-rgb, #{color-to-rgb-list($darkest)}) !important;
+
+  --med-color-dark: var(--med-color-#{$color-name}-dark, #{$dark}) !important;
+  --med-color-dark-rgb: var(--med-color-#{$color-name}-dark-rgb, #{color-to-rgb-list($dark)}) !important;
+
+  --med-color-medium: var(--med-color-#{$color-name}-medium, #{$medium}) !important;
+  --med-color-medium-rgb: var(--med-color-#{$color-name}-medium-rgb, #{color-to-rgb-list($medium)}) !important;
+
+  --med-color-light: var(--med-color-#{$color-name}-light, #{$light}) !important;
+  --med-color-light-rgb: var(--med-color-#{$color-name}-light-rgb, #{color-to-rgb-list($light)}) !important;
+
+  --med-color-lightest: var(--med-color-#{$color-name}-lightest, #{$lightest}) !important;
+  --med-color-lightest-rgb: var(--med-color-#{$color-name}-lightest-rgb, #{color-to-rgb-list($lightest)}) !important;
+
+  --med-color-gradient: var(--med-color-#{$color-name}-gradient, #{$gradient}) !important;
+}
+
+@mixin generate-medsoft-color-classes {
+  @each $color-name, $value in $medsoft-colors {
+    .ion-color-#{$color-name} {
+      @include generate-medsoft-color($color-name);
     }
   }
 }
