--- a/core/med-components/themes/medsoft-theme.scss
+++ b/core/med-components/themes/medsoft-theme.scss
@@ -27,42 +27,15 @@ $med-color-brand-primary-light: #baa87b;
 $med-color-brand-primary-lightest: #bbad8a;
 $med-color-brand-primary-gradient: linear-gradient(to right, $med-color-brand-primary-medium, $med-color-brand-primary-dark);
 
-$colors: (
-  /* primary-gradient: (
-    base:             $med-color-brand-primary-gradient,
-    contrast:         #fff,
-    shade:            $med-color-brand-primary-medium,
-    tint:             $med-color-brand-primary-medium
-  ), */
-  primary-darkest: (
-    base:             $med-color-brand-primary-darkest,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-brand-primary-darkest),
-    tint:             get-color-tint($med-color-brand-primary-darkest)
-  ),
-  primary-dark: (
-    base:             $med-color-brand-primary-dark,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-brand-primary-dark),
-    tint:             get-color-tint($med-color-brand-primary-dark)
-  ),
-  primary-medium: (
-    base:             $med-color-brand-primary-medium,
-    contrast:         #fff,
-    shade:            get-color-shade($med-color-brand-primary-medium),
-    tint:             get-color-tint($med-color-brand-primary-medium)
-  ),
-  primary-light: (
-    base:             $med-color-brand-primary-light,
-    contrast:         #000,
-    shade:            get-color-shade($med-color-brand-primary-light),
-    tint:             get-color-tint($med-color-brand-primary-light)
-  ),
-  primary-lightest: (
-    base:             $med-color-brand-primary-lightest,
-    contrast:         #000,
-    shade:            get-color-shade($med-color-brand-primary-lightest),
-    tint:             get-color-tint($med-color-brand-primary-lightest)
+$medsoft-colors: (
+  brand-primary: (
+    contrast: #fff,
+    darkest:   $med-color-brand-primary-darkest,
+    dark:      $med-color-brand-primary-dark,
+    medium:    $med-color-brand-primary-medium,
+    light:     $med-color-brand-primary-light,
+    lightest:  $med-color-brand-primary-lightest,
+    gradient:  linear-gradient(to right, $med-color-brand-primary-medium, $med-color-brand-primary-dark)
   ),
 );
 
