--- a/core/med-components/tokens/_cores.scss
+++ b/core/med-components/tokens/_cores.scss
@@ -33,6 +33,8 @@
   --med-color-aula-lightest: #{$med-color-aula-lightest};
   --med-color-aula-lightest-rgb: #{$med-color-aula-lightest-rgb};
 
+  --med-color-aula-gradient: #{$med-color-aula-gradient};
+
   // material color
   --med-color-material-darkest: #{$med-color-material-darkest};
   --med-color-material-darkest-rgb: #{$med-color-material-darkest-rgb};
@@ -48,6 +50,8 @@
 
   --med-color-material-lightest: #{$med-color-material-lightest};
   --med-color-material-lightest-rgb: #{$med-color-material-lightest-rgb};
+
+  --med-color-material-gradient: #{$med-color-material-gradient};
 
   // questões color
   --med-color-questoes-darkest: #{$med-color-questoes-darkest};
@@ -65,6 +69,8 @@
   --med-color-questoes-lightest: #{$med-color-questoes-lightest};
   --med-color-questoes-lightest-rgb: #{$med-color-questoes-lightest-rgb};
 
+  --med-color-questoes-gradient: #{$med-color-questoes-gradient};
+
   // revalida color
   --med-color-revalida-darkest: #{$med-color-revalida-darkest};
   --med-color-revalida-darkest-rgb: #{$med-color-revalida-darkest-rgb};
@@ -81,6 +87,8 @@
   --med-color-revalida-lightest: #{$med-color-revalida-lightest};
   --med-color-revalida-lightest-rgb: #{$med-color-revalida-lightest-rgb};
 
+  --med-color-revalida-gradient: #{$med-color-revalida-gradient};
+
   // provas & checklist color
   --med-color-provaschecklist-darkest: #{$med-color-provaschecklist-darkest};
   --med-color-provaschecklist-darkest-rgb: #{$med-color-provaschecklist-darkest-rgb};
@@ -96,6 +104,8 @@
 
   --med-color-provaschecklist-lightest: #{$med-color-provaschecklist-lightest};
   --med-color-provaschecklist-lightest-rgb: #{$med-color-provaschecklist-lightest-rgb};
+
+  --med-color-provaschecklist-gradient: #{$med-color-provaschecklist-gradient};
 
   // neutral dark color
   --med-color-neutral-dark-prime: #{$med-color-neutral-dark-prime};
@@ -147,6 +157,8 @@
   --med-color-feedback-warning-lightest: #{$med-color-feedback-warning-lightest};
   --med-color-feedback-warning-lightest-rgb: #{$med-color-feedback-warning-lightest-rgb};
 
+  --med-color-feedback-warning-gradient: #{$med-color-feedback-warning-gradient};
+
   // feedback warning color
   --med-color-feedback-error-darkest: #{$med-color-feedback-error-darkest};
   --med-color-feedback-error-darkest-rgb: #{$med-color-feedback-error-darkest-rgb};
@@ -163,6 +175,8 @@
   --med-color-feedback-error-lightest: #{$med-color-feedback-error-lightest};
   --med-color-feedback-error-lightest-rgb: #{$med-color-feedback-error-lightest-rgb};
 
+  --med-color-feedback-error-gradient: #{$med-color-feedback-error-gradient};
+
   // feedback success color
   --med-color-feedback-success-darkest: #{$med-color-feedback-success-darkest};
   --med-color-feedback-success-darkest-rgb: #{$med-color-feedback-success-darkest-rgb};
@@ -178,4 +192,6 @@
 
   --med-color-feedback-success-lightest: #{$med-color-feedback-success-lightest};
   --med-color-feedback-success-lightest-rgb: #{$med-color-feedback-success-lightest-rgb};
+
+  --med-color-feedback-success-gradient: #{$med-color-feedback-success-gradient};
 }
