--- a/core/med-components/_functions.scss
+++ b/core/med-components/_functions.scss
@@ -66,10 +66,34 @@
 //
 
 @function medsoft-current-color($variation, $alpha: null) {
+  $new-variation: null;
+
+  @if $variation == 10 {
+    $new-variation: lightest;
+  } @else if $variation == 20 {
+    $new-variation: light;
+  } @else if $variation == 30 {
+    $new-variation: dark;
+  } @else if $variation == 40 {
+    $new-variation: darkest;
+  } @else if $variation == prime {
+    $new-variation: prime;
+  }
+
   @if $alpha == null {
-    @return var(--med-color-#{$variation});
-  } @else {
-    @return rgba(var(--med-color-#{$variation}-rgb), #{$alpha});
+    @if $variation != 10 and $variation != 20 and $variation != 30 and $variation != 40 and $variation != prime {
+      @return var(--med-color-#{$variation});
+    } @else {
+      @return var(--med-color-#{$new-variation});
+    }
+  }
+
+  @if $alpha != null {
+    @if $variation != 10 and $variation != 20 and $variation != 30 and $variation != 40 and $variation != prime {
+      @return rgba(var(--med-color-#{$variation}-rgb), #{$alpha});
+    } @else {
+      @return rgba(var(--med-color-#{$new-variation}-rgb), #{$alpha});
+    }
   }
 }
 
